service.yaml
apiVersion: v1
kind: Service
metadata:
  name: melete-svc
spec:
  selector:
    app: melete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
status:
  loadBalancer: {}
