test-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: melete
  name: melete-svc
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.101.73.244
  clusterIPs:
    - 10.101.73.244
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 31110
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: melete
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
